      debhelper 7.x.
      Support for debhelper < 8 was dropped in dh-make-perl 0.77.
  * Reword "debhelper(1) 7 tiny" to the more accurate "dh(1)".
    Also rename is_dh7tiny() method to is_dhtiny().
  * Update copyright years.

  [ Axel Beckert ]
  * Apply wrap-and-sort.
  * Untangle checks for pristine-tar and upstream tarball in
    git_add_debian() (Closes: #735968)

 -- Dima Kogan <dima@secretsauce.net>  Wed, 25 Dec 2013 17:08:35 +0100

dh-make-perl (0.80-1) unstable; urgency=low

  [ CSILLAG Tamas ]
  * add Homepage to d/control (lintian check suggested)
  * add rename_to_debian_package_dir.
    This will rename the directory name to the canonical name of
    the debian package.
  * use system("mv ...") when cross device directory move is expected
    otherwise just use rename

  [ Damyan Ivanov ]
  * FromCPAN/find_debs_for_modules: do not crash when all offerred packages
    are perl(-(modules|base))? (Closes: #725206)
  * drop trailing slash from t/Control.t test file

  [ Salvatore Bonaccorso ]
  * Create packages with Standards-Version 3.9.5
  * Adjust Standards-Version in control files of testsuite
  * Bump Standards-Version to 3.9.5

 -- Damyan Ivanov <dmn@debian.org>  Tue, 29 Oct 2013 20:52:21 +0200

dh-make-perl (0.79-1) unstable; urgency=low

  * silence a warning when reporting about a core-satisfied dependency without
    a version
  * fix problems with perl 5.18:
    (Closes: #719829)
    + fix missing =back in Debian::Control::Stanza::CommaSeparated POD
    + sort a couple of hash key walks breaking tests with perl 5.18
  * remove the trailing slash from ustream/watch URLs
  * drop usage of experimental given/when in Packaging.pm
  * rework --only internal representation to be a hash
  * t/dists.t: rework running dh-make-perl and give all diagnostics when a
    test fails
  * fix special handling of changed copyright years
  * make dh-make-perl report its version on every invocation
