@@ -32,6 +32,9 @@ dh-make-perl (0.81-1) UNRELEASED; urgency=medium
   * Apply wrap-and-sort.
   * Untangle checks for pristine-tar and upstream tarball in
     git_add_debian() (Closes: #735968)
+  * Code-deduplication by splitting up guess_tarball() into
+    guess_tarball($prefix) and guess_debian_tarball() and then using
+    guess_tarball() also in setup_dir().
 
  -- Dima Kogan <dima@secretsauce.net>  Wed, 25 Dec 2013 17:08:35 +0100
 
